; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_polaris10_smumgr.c_polaris10_populate_smc_voltage_tables.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/smumgr/extr_polaris10_smumgr.c_polaris10_populate_smc_voltage_tables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { i32 }
%struct.SMU74_Discrete_DpmTable = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*, %struct.SMU74_Discrete_DpmTable*)* @polaris10_populate_smc_voltage_tables to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @polaris10_populate_smc_voltage_tables(%struct.pp_hwmgr* %0, %struct.SMU74_Discrete_DpmTable* %1) #0 {
  %3 = alloca %struct.pp_hwmgr*, align 8
  %4 = alloca %struct.SMU74_Discrete_DpmTable*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %3, align 8
  store %struct.SMU74_Discrete_DpmTable* %1, %struct.SMU74_Discrete_DpmTable** %4, align 8
  %5 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %6 = load %struct.SMU74_Discrete_DpmTable*, %struct.SMU74_Discrete_DpmTable** %4, align 8
  %7 = call i32 @polaris10_populate_smc_vddci_table(%struct.pp_hwmgr* %5, %struct.SMU74_Discrete_DpmTable* %6)
  %8 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %9 = load %struct.SMU74_Discrete_DpmTable*, %struct.SMU74_Discrete_DpmTable** %4, align 8
  %10 = call i32 @polaris10_populate_smc_mvdd_table(%struct.pp_hwmgr* %8, %struct.SMU74_Discrete_DpmTable* %9)
  %11 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %12 = load %struct.SMU74_Discrete_DpmTable*, %struct.SMU74_Discrete_DpmTable** %4, align 8
  %13 = call i32 @polaris10_populate_cac_table(%struct.pp_hwmgr* %11, %struct.SMU74_Discrete_DpmTable* %12)
  ret i32 0
}

declare dso_local i32 @polaris10_populate_smc_vddci_table(%struct.pp_hwmgr*, %struct.SMU74_Discrete_DpmTable*) #1

declare dso_local i32 @polaris10_populate_smc_mvdd_table(%struct.pp_hwmgr*, %struct.SMU74_Discrete_DpmTable*) #1

declare dso_local i32 @polaris10_populate_cac_table(%struct.pp_hwmgr*, %struct.SMU74_Discrete_DpmTable*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
